--- a/aws-cfn-template-with-lumen.template
+++ b/aws-cfn-template-with-lumen.template
@@ -258,6 +258,9 @@
                     "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
                     "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
                     "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
+                    "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
+                    "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
+                    "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
                     "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0"
                 ]
             },
@@ -274,6 +277,9 @@
                 "parent": "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
                 "embeds": [],
                 "iscontainedinside": [
+                    "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
+                    "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
+                    "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
                     "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
                     "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
                     "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
@@ -726,6 +732,9 @@
                     "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
                     "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
                     "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
+                    "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
+                    "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
+                    "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
                     "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0"
                 ]
             },
@@ -745,6 +754,9 @@
                     "10598241-6280-4975-88a3-b5b82e7ec625"
                 ],
                 "iscontainedinside": [
+                    "e4512b29-191e-4e99-95bd-3c57cd9ce993",
+                    "e4512b29-191e-4e99-95bd-3c57cd9ce993",
+                    "e4512b29-191e-4e99-95bd-3c57cd9ce993",
                     "e4512b29-191e-4e99-95bd-3c57cd9ce993",
                     "e4512b29-191e-4e99-95bd-3c57cd9ce993",
                     "e4512b29-191e-4e99-95bd-3c57cd9ce993",
@@ -1262,6 +1274,9 @@
                     "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
                     "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
                     "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
+                    "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
+                    "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
+                    "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
                     "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0"
                 ]
             },
@@ -1328,6 +1343,9 @@
                 "parent": "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
                 "embeds": [],
                 "iscontainedinside": [
+                    "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
+                    "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
+                    "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
                     "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
                     "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
                     "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
@@ -1717,6 +1735,9 @@
                     "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
                     "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
                     "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
+                    "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
+                    "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
+                    "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
                     "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0"
                 ]
             },
@@ -1864,6 +1885,9 @@
                     "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
                     "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
                     "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
+                    "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
+                    "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
+                    "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
                     "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0"
                 ]
             },
@@ -1880,6 +1904,9 @@
                 "parent": "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
                 "embeds": [],
                 "iscontainedinside": [
+                    "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
+                    "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
+                    "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
                     "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
                     "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
                     "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
@@ -2230,6 +2257,9 @@
                     "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
                     "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
                     "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
+                    "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
+                    "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
+                    "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
                     "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0"
                 ]
             },
@@ -2271,6 +2301,9 @@
                     "60905940-7c68-4ab1-bff2-f295554cd467"
                 ],
                 "iscontainedinside": [
+                    "673cfdc0-7919-4121-b1cd-fb8fe42e77cf",
+                    "673cfdc0-7919-4121-b1cd-fb8fe42e77cf",
+                    "673cfdc0-7919-4121-b1cd-fb8fe42e77cf",
                     "673cfdc0-7919-4121-b1cd-fb8fe42e77cf",
                     "673cfdc0-7919-4121-b1cd-fb8fe42e77cf",
                     "673cfdc0-7919-4121-b1cd-fb8fe42e77cf",
@@ -2470,6 +2503,9 @@
                     "673cfdc0-7919-4121-b1cd-fb8fe42e77cf",
                     "673cfdc0-7919-4121-b1cd-fb8fe42e77cf",
                     "673cfdc0-7919-4121-b1cd-fb8fe42e77cf",
+                    "673cfdc0-7919-4121-b1cd-fb8fe42e77cf",
+                    "673cfdc0-7919-4121-b1cd-fb8fe42e77cf",
+                    "673cfdc0-7919-4121-b1cd-fb8fe42e77cf",
                     "673cfdc0-7919-4121-b1cd-fb8fe42e77cf"
                 ]
             },
@@ -2503,6 +2539,9 @@
                     "a01054a8-19ad-4e7c-9d37-83d261a17a58"
                 ],
                 "iscontainedinside": [
+                    "673cfdc0-7919-4121-b1cd-fb8fe42e77cf",
+                    "673cfdc0-7919-4121-b1cd-fb8fe42e77cf",
+                    "673cfdc0-7919-4121-b1cd-fb8fe42e77cf",
                     "673cfdc0-7919-4121-b1cd-fb8fe42e77cf",
                     "673cfdc0-7919-4121-b1cd-fb8fe42e77cf",
                     "673cfdc0-7919-4121-b1cd-fb8fe42e77cf",
@@ -2776,15 +2815,16 @@
                                 "command": "yum -y install httpd24 mysql php72 git"
                             },
                             "3": {
-                                "command": "curl -sS https://getcomposer.org/installer | php"
+                                "env": {
+                                    "HOEM": "/root",
+                                    "COMPOSER_HOME": "/root"
+                                },
+                                "command": "/usr/bin/curl -s https://getcomposer.org/installer | /usr/bin/php && mv composer.phar /usr/local/bin/composer"
                             },
                             "4": {
-                                "command": "mv composer.phar /usr/local/bin/composer"
-                            },
-                            "5": {
                                 "command": "mkdir -p /var/www/html/"
                             },
-                            "6": {
+                            "5": {
                                 "cwd": "/var/www/html",
                                 "command": "git clone https://github.com/yueguchi/aws-cfn-template-with-lumen.git"
                             }
