sedがうまく動かない

--- a/aws-cfn-template-with-lumen.template
+++ b/aws-cfn-template-with-lumen.template
@@ -261,6 +261,15 @@
                     "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
                     "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
                     "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
+                    "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
+                    "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
+                    "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
+                    "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
+                    "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
+                    "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
+                    "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
+                    "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
+                    "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
                     "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0"
                 ]
             },
@@ -277,6 +286,15 @@
                 "parent": "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
                 "embeds": [],
                 "iscontainedinside": [
+                    "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
+                    "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
+                    "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
+                    "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
+                    "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
+                    "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
+                    "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
+                    "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
+                    "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
                     "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
                     "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
                     "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
@@ -735,6 +753,15 @@
                     "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
                     "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
                     "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
+                    "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
+                    "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
+                    "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
+                    "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
+                    "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
+                    "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
+                    "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
+                    "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
+                    "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
                     "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0"
                 ]
             },
@@ -754,6 +781,15 @@
                     "10598241-6280-4975-88a3-b5b82e7ec625"
                 ],
                 "iscontainedinside": [
+                    "e4512b29-191e-4e99-95bd-3c57cd9ce993",
+                    "e4512b29-191e-4e99-95bd-3c57cd9ce993",
+                    "e4512b29-191e-4e99-95bd-3c57cd9ce993",
+                    "e4512b29-191e-4e99-95bd-3c57cd9ce993",
+                    "e4512b29-191e-4e99-95bd-3c57cd9ce993",
+                    "e4512b29-191e-4e99-95bd-3c57cd9ce993",
+                    "e4512b29-191e-4e99-95bd-3c57cd9ce993",
+                    "e4512b29-191e-4e99-95bd-3c57cd9ce993",
+                    "e4512b29-191e-4e99-95bd-3c57cd9ce993",
                     "e4512b29-191e-4e99-95bd-3c57cd9ce993",
                     "e4512b29-191e-4e99-95bd-3c57cd9ce993",
                     "e4512b29-191e-4e99-95bd-3c57cd9ce993",
@@ -1277,6 +1313,15 @@
                     "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
                     "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
                     "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
+                    "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
+                    "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
+                    "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
+                    "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
+                    "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
+                    "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
+                    "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
+                    "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
+                    "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
                     "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0"
                 ]
             },
@@ -1343,6 +1388,15 @@
                 "parent": "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
                 "embeds": [],
                 "iscontainedinside": [
+                    "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
+                    "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
+                    "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
+                    "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
+                    "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
+                    "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
+                    "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
+                    "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
+                    "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
                     "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
                     "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
                     "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
@@ -1738,6 +1792,15 @@
                     "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
                     "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
                     "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
+                    "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
+                    "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
+                    "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
+                    "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
+                    "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
+                    "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
+                    "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
+                    "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
+                    "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
                     "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0"
                 ]
             },
@@ -1888,6 +1951,15 @@
                     "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
                     "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
                     "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
+                    "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
+                    "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
+                    "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
+                    "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
+                    "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
+                    "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
+                    "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
+                    "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
+                    "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
                     "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0"
                 ]
             },
@@ -1904,6 +1976,15 @@
                 "parent": "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
                 "embeds": [],
                 "iscontainedinside": [
+                    "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
+                    "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
+                    "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
+                    "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
+                    "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
+                    "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
+                    "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
+                    "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
+                    "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
                     "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
                     "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
                     "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
@@ -2260,6 +2341,15 @@
                     "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
                     "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
                     "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
+                    "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
+                    "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
+                    "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
+                    "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
+                    "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
+                    "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
+                    "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
+                    "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
+                    "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
                     "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0"
                 ]
             },
@@ -2301,6 +2391,15 @@
                     "60905940-7c68-4ab1-bff2-f295554cd467"
                 ],
                 "iscontainedinside": [
+                    "673cfdc0-7919-4121-b1cd-fb8fe42e77cf",
+                    "673cfdc0-7919-4121-b1cd-fb8fe42e77cf",
+                    "673cfdc0-7919-4121-b1cd-fb8fe42e77cf",
+                    "673cfdc0-7919-4121-b1cd-fb8fe42e77cf",
+                    "673cfdc0-7919-4121-b1cd-fb8fe42e77cf",
+                    "673cfdc0-7919-4121-b1cd-fb8fe42e77cf",
+                    "673cfdc0-7919-4121-b1cd-fb8fe42e77cf",
+                    "673cfdc0-7919-4121-b1cd-fb8fe42e77cf",
+                    "673cfdc0-7919-4121-b1cd-fb8fe42e77cf",
                     "673cfdc0-7919-4121-b1cd-fb8fe42e77cf",
                     "673cfdc0-7919-4121-b1cd-fb8fe42e77cf",
                     "673cfdc0-7919-4121-b1cd-fb8fe42e77cf",
@@ -2506,6 +2605,15 @@
                     "673cfdc0-7919-4121-b1cd-fb8fe42e77cf",
                     "673cfdc0-7919-4121-b1cd-fb8fe42e77cf",
                     "673cfdc0-7919-4121-b1cd-fb8fe42e77cf",
+                    "673cfdc0-7919-4121-b1cd-fb8fe42e77cf",
+                    "673cfdc0-7919-4121-b1cd-fb8fe42e77cf",
+                    "673cfdc0-7919-4121-b1cd-fb8fe42e77cf",
+                    "673cfdc0-7919-4121-b1cd-fb8fe42e77cf",
+                    "673cfdc0-7919-4121-b1cd-fb8fe42e77cf",
+                    "673cfdc0-7919-4121-b1cd-fb8fe42e77cf",
+                    "673cfdc0-7919-4121-b1cd-fb8fe42e77cf",
+                    "673cfdc0-7919-4121-b1cd-fb8fe42e77cf",
+                    "673cfdc0-7919-4121-b1cd-fb8fe42e77cf",
                     "673cfdc0-7919-4121-b1cd-fb8fe42e77cf"
                 ]
             },
@@ -2539,6 +2647,15 @@
                     "a01054a8-19ad-4e7c-9d37-83d261a17a58"
                 ],
                 "iscontainedinside": [
+                    "673cfdc0-7919-4121-b1cd-fb8fe42e77cf",
+                    "673cfdc0-7919-4121-b1cd-fb8fe42e77cf",
+                    "673cfdc0-7919-4121-b1cd-fb8fe42e77cf",
+                    "673cfdc0-7919-4121-b1cd-fb8fe42e77cf",
+                    "673cfdc0-7919-4121-b1cd-fb8fe42e77cf",
+                    "673cfdc0-7919-4121-b1cd-fb8fe42e77cf",
+                    "673cfdc0-7919-4121-b1cd-fb8fe42e77cf",
+                    "673cfdc0-7919-4121-b1cd-fb8fe42e77cf",
+                    "673cfdc0-7919-4121-b1cd-fb8fe42e77cf",
                     "673cfdc0-7919-4121-b1cd-fb8fe42e77cf",
                     "673cfdc0-7919-4121-b1cd-fb8fe42e77cf",
                     "673cfdc0-7919-4121-b1cd-fb8fe42e77cf",
@@ -2812,7 +2929,7 @@
                                 "command": "yum -y update"
                             },
                             "2": {
-                                "command": "yum -y install httpd24 mysql php72 git"
+                                "command": "yum -y install httpd24 mysql php72 php72-mbstring git"
                             },
                             "3": {
                                 "env": {
@@ -2827,6 +2944,22 @@
                             "5": {
                                 "cwd": "/var/www/html",
                                 "command": "git clone https://github.com/yueguchi/aws-cfn-template-with-lumen.git"
+                            },
+                            "6": {
+                                "env": {
+                                    "HOEM": "/root",
+                                    "COMPOSER_HOME": "/root"
+                                },
+                                "cwd": "/var/www/html/aws-cfn-template-with-lumen",
+                                "command": "/usr/local/bin/composer install"
+                            },
+                            "7": {
+                                "cwd": "/etc/httpd/conf",
+                                "command": "cat httpd.conf | grep -v '#' | sed '/^$/d' | sed -e 's/DocumentRoot \"/var/www/html\"/DocumentRoot \"/var/www/html/aws-cfn-template-with-lumen/public\"/g' > httpd.conf2"
+                            },
+                            "8": {
+                                "cwd": "/etc/httpd/conf",
+                                "command": "mv -f httpd.conf2 httpd.conf"
                             }
                         },
                         "files": {
