httpd.confをcloneさせてcpする方針に変更

--- a/aws-cfn-template-with-lumen.template
+++ b/aws-cfn-template-with-lumen.template
@@ -270,6 +270,7 @@
                     "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
                     "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
                     "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
+                    "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
                     "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0"
                 ]
             },
@@ -286,6 +287,7 @@
                 "parent": "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
                 "embeds": [],
                 "iscontainedinside": [
+                    "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
                     "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
                     "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
                     "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
@@ -762,6 +764,7 @@
                     "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
                     "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
                     "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
+                    "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
                     "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0"
                 ]
             },
@@ -781,6 +784,7 @@
                     "10598241-6280-4975-88a3-b5b82e7ec625"
                 ],
                 "iscontainedinside": [
+                    "e4512b29-191e-4e99-95bd-3c57cd9ce993",
                     "e4512b29-191e-4e99-95bd-3c57cd9ce993",
                     "e4512b29-191e-4e99-95bd-3c57cd9ce993",
                     "e4512b29-191e-4e99-95bd-3c57cd9ce993",
@@ -1322,6 +1326,7 @@
                     "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
                     "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
                     "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
+                    "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
                     "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0"
                 ]
             },
@@ -1388,6 +1393,7 @@
                 "parent": "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
                 "embeds": [],
                 "iscontainedinside": [
+                    "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
                     "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
                     "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
                     "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
@@ -1801,6 +1807,7 @@
                     "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
                     "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
                     "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
+                    "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
                     "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0"
                 ]
             },
@@ -1960,6 +1967,7 @@
                     "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
                     "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
                     "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
+                    "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
                     "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0"
                 ]
             },
@@ -1976,6 +1984,7 @@
                 "parent": "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
                 "embeds": [],
                 "iscontainedinside": [
+                    "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
                     "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
                     "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
                     "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
@@ -2350,6 +2359,7 @@
                     "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
                     "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
                     "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
+                    "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
                     "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0"
                 ]
             },
@@ -2391,6 +2401,7 @@
                     "60905940-7c68-4ab1-bff2-f295554cd467"
                 ],
                 "iscontainedinside": [
+                    "673cfdc0-7919-4121-b1cd-fb8fe42e77cf",
                     "673cfdc0-7919-4121-b1cd-fb8fe42e77cf",
                     "673cfdc0-7919-4121-b1cd-fb8fe42e77cf",
                     "673cfdc0-7919-4121-b1cd-fb8fe42e77cf",
@@ -2614,6 +2625,7 @@
                     "673cfdc0-7919-4121-b1cd-fb8fe42e77cf",
                     "673cfdc0-7919-4121-b1cd-fb8fe42e77cf",
                     "673cfdc0-7919-4121-b1cd-fb8fe42e77cf",
+                    "673cfdc0-7919-4121-b1cd-fb8fe42e77cf",
                     "673cfdc0-7919-4121-b1cd-fb8fe42e77cf"
                 ]
             },
@@ -2647,6 +2659,7 @@
                     "a01054a8-19ad-4e7c-9d37-83d261a17a58"
                 ],
                 "iscontainedinside": [
+                    "673cfdc0-7919-4121-b1cd-fb8fe42e77cf",
                     "673cfdc0-7919-4121-b1cd-fb8fe42e77cf",
                     "673cfdc0-7919-4121-b1cd-fb8fe42e77cf",
                     "673cfdc0-7919-4121-b1cd-fb8fe42e77cf",
@@ -2954,12 +2967,11 @@
                                 "command": "/usr/local/bin/composer install"
                             },
                             "7": {
-                                "cwd": "/etc/httpd/conf",
-                                "command": "cat httpd.conf | grep -v '#' | sed '/^$/d' | sed -e 's/DocumentRoot \"/var/www/html\"/DocumentRoot \"/var/www/html/aws-cfn-template-with-lumen/public\"/g' > httpd.conf2"
+                                "cwd": "/var/www/html/aws-cfn-template-with-lumen",
+                                "command": "cp -f httpd.conf /etc/httpd/conf/httpd.conf"
                             },
                             "8": {
-                                "cwd": "/etc/httpd/conf",
-                                "command": "mv -f httpd.conf2 httpd.conf"
+                                "command": "apachectl restart"
                             }
                         },
                         "files": {
