cfn起動時のscriptでlumenが立ち上がり、アクセスできるところまでtemplate作成完了

--- a/aws-cfn-template-with-lumen.template
+++ b/aws-cfn-template-with-lumen.template
@@ -271,6 +271,8 @@
                     "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
                     "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
                     "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
+                    "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
+                    "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
                     "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0"
                 ]
             },
@@ -287,6 +289,8 @@
                 "parent": "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
                 "embeds": [],
                 "iscontainedinside": [
+                    "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
+                    "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
                     "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
                     "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
                     "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
@@ -765,6 +769,8 @@
                     "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
                     "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
                     "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
+                    "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
+                    "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
                     "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0"
                 ]
             },
@@ -784,6 +790,8 @@
                     "10598241-6280-4975-88a3-b5b82e7ec625"
                 ],
                 "iscontainedinside": [
+                    "e4512b29-191e-4e99-95bd-3c57cd9ce993",
+                    "e4512b29-191e-4e99-95bd-3c57cd9ce993",
                     "e4512b29-191e-4e99-95bd-3c57cd9ce993",
                     "e4512b29-191e-4e99-95bd-3c57cd9ce993",
                     "e4512b29-191e-4e99-95bd-3c57cd9ce993",
@@ -1327,6 +1335,8 @@
                     "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
                     "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
                     "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
+                    "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
+                    "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
                     "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0"
                 ]
             },
@@ -1393,6 +1403,8 @@
                 "parent": "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
                 "embeds": [],
                 "iscontainedinside": [
+                    "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
+                    "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
                     "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
                     "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
                     "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
@@ -1808,6 +1820,8 @@
                     "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
                     "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
                     "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
+                    "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
+                    "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
                     "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0"
                 ]
             },
@@ -1968,6 +1982,8 @@
                     "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
                     "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
                     "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
+                    "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
+                    "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
                     "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0"
                 ]
             },
@@ -1984,6 +2000,8 @@
                 "parent": "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
                 "embeds": [],
                 "iscontainedinside": [
+                    "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
+                    "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
                     "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
                     "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
                     "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
@@ -2360,6 +2378,8 @@
                     "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
                     "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
                     "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
+                    "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
+                    "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
                     "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0"
                 ]
             },
@@ -2401,6 +2421,8 @@
                     "60905940-7c68-4ab1-bff2-f295554cd467"
                 ],
                 "iscontainedinside": [
+                    "673cfdc0-7919-4121-b1cd-fb8fe42e77cf",
+                    "673cfdc0-7919-4121-b1cd-fb8fe42e77cf",
                     "673cfdc0-7919-4121-b1cd-fb8fe42e77cf",
                     "673cfdc0-7919-4121-b1cd-fb8fe42e77cf",
                     "673cfdc0-7919-4121-b1cd-fb8fe42e77cf",
@@ -2626,6 +2648,8 @@
                     "673cfdc0-7919-4121-b1cd-fb8fe42e77cf",
                     "673cfdc0-7919-4121-b1cd-fb8fe42e77cf",
                     "673cfdc0-7919-4121-b1cd-fb8fe42e77cf",
+                    "673cfdc0-7919-4121-b1cd-fb8fe42e77cf",
+                    "673cfdc0-7919-4121-b1cd-fb8fe42e77cf",
                     "673cfdc0-7919-4121-b1cd-fb8fe42e77cf"
                 ]
             },
@@ -2659,6 +2683,8 @@
                     "a01054a8-19ad-4e7c-9d37-83d261a17a58"
                 ],
                 "iscontainedinside": [
+                    "673cfdc0-7919-4121-b1cd-fb8fe42e77cf",
+                    "673cfdc0-7919-4121-b1cd-fb8fe42e77cf",
                     "673cfdc0-7919-4121-b1cd-fb8fe42e77cf",
                     "673cfdc0-7919-4121-b1cd-fb8fe42e77cf",
                     "673cfdc0-7919-4121-b1cd-fb8fe42e77cf",
@@ -2968,10 +2994,10 @@
                             },
                             "7": {
                                 "cwd": "/var/www/html/aws-cfn-template-with-lumen",
-                                "command": "cp -f httpd.conf /etc/httpd/conf/httpd.conf"
+                                "command": "\\cp -f httpd.conf /etc/httpd/conf/httpd.conf"
                             },
                             "8": {
-                                "command": "apachectl restart"
+                                "command": "/usr/sbin/apachectl restart"
                             }
                         },
                         "files": {
