httpd.conf securoty

--- a/httpd.conf
+++ b/httpd.conf
@@ -8,7 +8,26 @@ ServerAdmin root@localhost
     AllowOverride none
     Require all denied
 </Directory>
-DocumentRoot "/var/www/html/aws-cfn-template-with-lumen/public"
+
+<VirtualHost *:80>
+    ServerAdmin webmaster@localhost
+    DocumentRoot "/var/www/html/aws-cfn-template-with-lumen/public"
+    # クリックジャッキング対策
+    Header always append X-Frame-Options SAMEORIGIN
+    # XSS対策
+    Header always set X-XSS-Protection "1; mode=block"
+    Header always set X-Content-Type-Options nosniff
+    <Directory "/var/www/html/aws-cfn-template-with-lumen/public">
+      AllowOverride All
+      allow from all
+      Options +Indexes
+    </Directory>
+    ErrorLog /var/log/httpd/error.log
+    CustomLog /var/log/httpd/access.log combined
+
+    Alias /icons/ "/var/www/html/aws-cfn-template-with-lumen/public/icons/"
+</VirtualHost>
+
 <Directory "/var/www">
     AllowOverride None
     Require all granted
