--- a/.env.example
+++ b/.env.example
@@ -8,10 +8,12 @@ LOG_SLACK_WEBHOOK_URL=
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
+DB_HOST_WRITE=rdscluster.cluster-cbzaa01dr3cr.ap-northeast-1.rds.amazonaws.com
+DB_HOST_READ=rdscluster.cluster-ro-cbzaa01dr3cr.ap-northeast-1.rds.amazonaws.com
 DB_PORT=3306
-DB_DATABASE=homestead
-DB_USERNAME=homestead
-DB_PASSWORD=secret
+DB_DATABASE=offers
+DB_USERNAME=root
+DB_PASSWORD=password
 
 CACHE_DRIVER=file
 QUEUE_DRIVER=sync
