--- a/aws-cfn-template-with-lumen.template
+++ b/aws-cfn-template-with-lumen.template
@@ -273,6 +273,7 @@
                     "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
                     "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
                     "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
+                    "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
                     "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0"
                 ]
             },
@@ -289,6 +290,7 @@
                 "parent": "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
                 "embeds": [],
                 "iscontainedinside": [
+                    "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
                     "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
                     "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
                     "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
@@ -771,6 +773,7 @@
                     "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
                     "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
                     "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
+                    "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
                     "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0"
                 ]
             },
@@ -790,6 +793,7 @@
                     "10598241-6280-4975-88a3-b5b82e7ec625"
                 ],
                 "iscontainedinside": [
+                    "e4512b29-191e-4e99-95bd-3c57cd9ce993",
                     "e4512b29-191e-4e99-95bd-3c57cd9ce993",
                     "e4512b29-191e-4e99-95bd-3c57cd9ce993",
                     "e4512b29-191e-4e99-95bd-3c57cd9ce993",
@@ -1337,6 +1341,7 @@
                     "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
                     "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
                     "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
+                    "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
                     "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0"
                 ]
             },
@@ -1403,6 +1408,7 @@
                 "parent": "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
                 "embeds": [],
                 "iscontainedinside": [
+                    "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
                     "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
                     "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
                     "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
@@ -1822,6 +1828,7 @@
                     "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
                     "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
                     "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
+                    "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
                     "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0"
                 ]
             },
@@ -1984,6 +1991,7 @@
                     "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
                     "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
                     "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
+                    "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
                     "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0"
                 ]
             },
@@ -2000,6 +2008,7 @@
                 "parent": "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
                 "embeds": [],
                 "iscontainedinside": [
+                    "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
                     "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
                     "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
                     "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
@@ -2380,6 +2389,7 @@
                     "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
                     "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
                     "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
+                    "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0",
                     "a33cdf7b-4e52-4d0c-b3ee-4ccadbe18db0"
                 ]
             },
@@ -2421,6 +2431,7 @@
                     "60905940-7c68-4ab1-bff2-f295554cd467"
                 ],
                 "iscontainedinside": [
+                    "673cfdc0-7919-4121-b1cd-fb8fe42e77cf",
                     "673cfdc0-7919-4121-b1cd-fb8fe42e77cf",
                     "673cfdc0-7919-4121-b1cd-fb8fe42e77cf",
                     "673cfdc0-7919-4121-b1cd-fb8fe42e77cf",
@@ -2650,6 +2661,7 @@
                     "673cfdc0-7919-4121-b1cd-fb8fe42e77cf",
                     "673cfdc0-7919-4121-b1cd-fb8fe42e77cf",
                     "673cfdc0-7919-4121-b1cd-fb8fe42e77cf",
+                    "673cfdc0-7919-4121-b1cd-fb8fe42e77cf",
                     "673cfdc0-7919-4121-b1cd-fb8fe42e77cf"
                 ]
             },
@@ -2683,6 +2695,7 @@
                     "a01054a8-19ad-4e7c-9d37-83d261a17a58"
                 ],
                 "iscontainedinside": [
+                    "673cfdc0-7919-4121-b1cd-fb8fe42e77cf",
                     "673cfdc0-7919-4121-b1cd-fb8fe42e77cf",
                     "673cfdc0-7919-4121-b1cd-fb8fe42e77cf",
                     "673cfdc0-7919-4121-b1cd-fb8fe42e77cf",
@@ -2968,7 +2981,7 @@
                                 "command": "yum -y update"
                             },
                             "2": {
-                                "command": "yum -y install httpd24 mysql php72 php72-mbstring git"
+                                "command": "yum -y install httpd24 mysql php72 php72-mbstring php72-pdo git"
                             },
                             "3": {
                                 "env": {
